--- a/src/index.html
+++ b/src/index.html
@@ -7,23 +7,26 @@
         <title>Lavn</title>
         <!--Bootstrap 4-->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-            crossorigin="anonymous" />
+          crossorigin="anonymous" />
         <!--Font Awesome-->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-            crossorigin="anonymous">
+          crossorigin="anonymous">
         <!--Css files-->
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/responsive.css">
         <!--Ajax javascript-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
+          crossorigin="anonymous"></script>
         <!--Bootstrap javascript-->
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-        <!--Javascript file-->
-        <script src="javascript/main.js"></script>
-    </head>
+          crossorigin="anonymous"></script>
+        <!--JQuery-->
+        <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+          crossorigin="anonymous"></script>
+        <!--Scroll reveal Javascript-->
+        <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+      </head>
     <body>
         <header>
             <!--Responsive Navigation bar-->
@@ -64,21 +67,43 @@
             <!--Header-->
             <div class="container text-center">
               <div class="row">
-                <div class="col-md-7 col-sm-12  text-white">
-                  <h6>YOU WANT IT, WE MAKE IT</h6>
-                  <h1>VIETNAM <br> ON THE GO</h1>
-                  <p>
-                    Welcome to Lavn restaurant! Let's explore our website.
-                  </p>
-                  <button class="btn btn-lg px-4 py-2 btn-outline-secondary">
-                    MAKE A RESERVATION
-                  </button>
+                <div class="col-md-7 col-12  text-white">
+                  <div class="showcase-left">
+                    <h6>YOU WANT IT, WE MAKE IT</h6>
+                    <h1>VIETNAM <br> ON THE GO</h1>
+                    <p>
+                      Welcome to Lavn restaurant! Let's explore our website.
+                    </p>
+                    <button class="btn btn-lg px-4 py-2 btn-outline-secondary">
+                      MAKE A RESERVATION
+                    </button>
+                  </div>
                 </div>
-                <div class="col-md-5 col-sm-12  h-25">
-                  <img id ="food" src="images/header_picture.png" alt="Food" />
+                <div class="col-md-5 col-12  h-25">
+                  <div class="showcase-right">
+                    <img id ="food" src="images/header_picture.png" alt="Food" />
+                  </div>
                 </div>
               </div>
             </div>
         </header>
+        <!--Scroll Reveal Javascript effect-->
+        <script>
+        window.sr = ScrollReveal();
+        sr.reveal('.navbar', {
+          duration: 2000,
+          origin:'bottom'
+        });
+        sr.reveal('.showcase-left', {
+          duration: 2000,
+          origin:'top',
+          distance:'300px'
+        });
+        sr.reveal('.showcase-right', {
+          duration: 2000,
+          origin:'right',
+          distance:'300px'
+        });
+      </script>
     </body>
 </html>
