--- a/src/index.html
+++ b/src/index.html
@@ -1,109 +1,109 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-        <title>Lavn</title>
-        <!--Bootstrap 4-->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-          crossorigin="anonymous" />
-        <!--Font Awesome-->
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-          crossorigin="anonymous">
-        <!--Css files-->
-        <link rel="stylesheet" href="css/style.css" />
-        <link rel="stylesheet" href="css/responsive.css">
-        <!--Ajax javascript-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-          crossorigin="anonymous"></script>
-        <!--Bootstrap javascript-->
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-          crossorigin="anonymous"></script>
-        <!--JQuery-->
-        <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
-          crossorigin="anonymous"></script>
-        <!--Scroll reveal Javascript-->
-        <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
-      </head>
-    <body>
-        <header>
-            <!--Responsive Navigation bar-->
-            <div class="container-fluid p-0">
-              <nav class="navbar navbar-expand-lg" id="navbar">
-                <h2 class="navbar-brand" href="#">Lavn</h2>
-                <button class="navbar-toggler btn btn-outline-light" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <i class="fas fa-align-right text-dark"></i>
+  <head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <title>Lavn</title>
+    <!--Bootstrap 4-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous" />
+    <!--Font Awesome-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+      crossorigin="anonymous">
+    <!--Css files-->
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css">
+    <!--Ajax javascript-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"></script>
+    <!--Bootstrap javascript-->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"></script>
+    <!--JQuery-->
+    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+      crossorigin="anonymous"></script>
+    <!--Scroll reveal Javascript-->
+    <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+  </head>
+  <body>
+    <header>
+      <!--Responsive Navigation bar-->
+      <div class="container-fluid p-0">
+        <nav class="navbar navbar-expand-lg" id="navbar">
+          <h2 class="navbar-brand" href="#">Lavn</h2>
+          <button class="navbar-toggler btn btn-outline-light" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <i class="fas fa-align-right text-dark"></i>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="mr-auto"></div>
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link home" href="#">HOME
+                    <span class="sr-only">(current)</span>
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">STORY</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">MENU</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#" class="nav-link">RESERVATION</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">LOG IN</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">CONTACT US</a>
+                </li>
+              </ul>
+          </div>
+        </nav>
+      </div> 
+      <!--Header-->
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-md-7 col-12  text-white">
+            <div class="showcase-left">
+              <h6>YOU WANT IT, WE MAKE IT</h6>
+              <h1>VIETNAM <br> ON THE GO</h1>
+              <p>
+                Welcome to Lavn restaurant! Let's explore our website.
+              </p>
+              <button class="btn-lg px-4 py-2">
+                MAKE A RESERVATION
               </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                  <div class="mr-auto"></div>
-                  <ul class="navbar-nav">
-                    <li class="nav-item active">
-                      <a class="nav-link home" href="#">HOME
-                        <span class="sr-only">(current)</span>
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">STORY</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">MENU</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">RESERVATION</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">LOG IN</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">CONTACT US</a>
-                    </li>
-                  </ul>
-                </div>
-              </nav>
             </div>
-            <!--Header-->
-            <div class="container text-center">
-              <div class="row">
-                <div class="col-md-7 col-12  text-white">
-                  <div class="showcase-left">
-                    <h6>YOU WANT IT, WE MAKE IT</h6>
-                    <h1>VIETNAM <br> ON THE GO</h1>
-                    <p>
-                      Welcome to Lavn restaurant! Let's explore our website.
-                    </p>
-                    <button class="btn btn-lg px-4 py-2 btn-outline-secondary">
-                      MAKE A RESERVATION
-                    </button>
-                  </div>
-                </div>
-                <div class="col-md-5 col-12  h-25">
-                  <div class="showcase-right">
-                    <img id ="food" src="images/header_picture.png" alt="Food" />
-                  </div>
-                </div>
-              </div>
+          </div>
+          <div class="col-md-5 col-12  h-25">
+            <div class="showcase-right">
+              <img id ="food" src="images/header_picture.png" alt="Food" />
             </div>
-        </header>
-        <!--Scroll Reveal Javascript effect-->
-        <script>
-        window.sr = ScrollReveal();
-        sr.reveal('.navbar', {
-          duration: 2000,
-          origin:'bottom'
-        });
-        sr.reveal('.showcase-left', {
-          duration: 2000,
-          origin:'top',
-          distance:'300px'
-        });
-        sr.reveal('.showcase-right', {
-          duration: 2000,
-          origin:'right',
-          distance:'300px'
-        });
-      </script>
-    </body>
-</html>
+          </div>
+        </div>
+        </div>
+    </header>
+    <!--Scroll Reveal Javascript effect-->
+    <script>
+      window.sr = ScrollReveal();
+      sr.reveal('.navbar', {
+        duration: 2000,
+        origin:'bottom'
+      });
+      sr.reveal('.showcase-left', {
+        duration: 2000,
+        origin:'top',
+        distance:'300px'
+      });
+      sr.reveal('.showcase-right', {
+        duration: 2000,
+        origin:'right',
+        distance:'300px'
+      });
+    </script>
+  </body>
+</html>>
