--- a/src/index.html
+++ b/src/index.html
@@ -1,109 +1,173 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Lavn</title>
-    <!--Bootstrap 4-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous" />
-    <!--Font Awesome-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-      crossorigin="anonymous">
-    <!--Css files-->
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/responsive.css">
-    <!--Ajax javascript-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"></script>
-    <!--Bootstrap javascript-->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"></script>
-    <!--JQuery-->
-    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
-      crossorigin="anonymous"></script>
-    <!--Scroll reveal Javascript-->
-    <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
-  </head>
-  <body>
-    <header>
-      <!--Responsive Navigation bar-->
-      <div class="container-fluid p-0">
-        <nav class="navbar navbar-expand-lg" id="navbar">
-          <h2 class="navbar-brand" href="#">Lavn</h2>
-          <button class="navbar-toggler btn btn-outline-light" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <i class="fas fa-align-right text-dark"></i>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <div class="mr-auto"></div>
-              <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link home" href="#">HOME
-                    <span class="sr-only">(current)</span>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">STORY</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">MENU</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#" class="nav-link">RESERVATION</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">LOG IN</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">CONTACT US</a>
-                </li>
-              </ul>
-          </div>
-        </nav>
-      </div> 
-      <!--Header-->
-      <div class="container text-center">
-        <div class="row">
-          <div class="col-md-7 col-12  text-white">
-            <div class="showcase-left">
-              <h6>YOU WANT IT, WE MAKE IT</h6>
-              <h1>VIETNAM <br> ON THE GO</h1>
-              <p>
-                Welcome to Lavn restaurant! Let's explore our website.
-              </p>
-              <button class="btn-lg px-4 py-2">
-                MAKE A RESERVATION
+    <head>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+        <title>Lavn</title>
+        <!--Bootstrap 4-->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+            crossorigin="anonymous" />
+        <!--Font Awesome-->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+            crossorigin="anonymous">
+        <!--Scroll reveal Javascript-->
+        <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+        <!--Css files-->
+        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/responsive.css">
+    </head>
+    <body>
+        <header>
+            <!--Navigation bar-->
+            <div class="container-fluid p-0">
+              <nav class="navbar navbar-expand-lg" id="navbar">
+                <h2 class="navbar-brand" href="#">Lavn</h2>
+                <button class="navbar-toggler btn btn-outline-light" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <i class="fas fa-align-right text-dark"></i>
               </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                  <div class="mr-auto"></div>
+                  <ul class="navbar-nav">
+                    <li class="nav-item active">
+                      <a class="nav-link home" href="#">HOME
+                        <span class="sr-only">(current)</span>
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">STORY</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">MENU</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <div class="dropdown">
+                        <a href="#" class="nav-link">RESERVATION</a>
+                      </div>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">LOG IN</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">CONTACT US</a>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
             </div>
-          </div>
-          <div class="col-md-5 col-12  h-25">
-            <div class="showcase-right">
-              <img id ="food" src="images/header_picture.png" alt="Food" />
+            <!--Header-->
+            <div class="container text-center">
+              <div class="row">
+                <div class="col-md-7 col-sm-12 showcase-left text-white">
+                  <h6>YOU WANT IT, WE MAKE IT</h6>
+                  <h1>VIETNAM <br> ON THE GO</h1>
+                  <p>
+                    Welcome to Lavn restaurant! Let's discover our website. 
+                  </p>
+                  <div class="middle">
+                    <button class="button button1">Make a reservation</button>
+                  </div>
+                </div>
+                <div class="col-md-5 col-sm-12 showcase-right h-25">
+                  <img id ="food" src="images/header_picture.png" alt="Food" />
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
-        </div>
-    </header>
-    <!--Scroll Reveal Javascript effect-->
-    <script>
-      window.sr = ScrollReveal();
-      sr.reveal('.navbar', {
-        duration: 2000,
-        origin:'bottom'
-      });
-      sr.reveal('.showcase-left', {
-        duration: 2000,
-        origin:'top',
-        distance:'300px'
-      });
-      sr.reveal('.showcase-right', {
-        duration: 2000,
-        origin:'right',
-        distance:'300px'
-      });
-    </script>
-  </body>
-</html>>
+          </header>
+          <!--Main page-->
+          <main>
+            <section class="section-1" id="chef">
+                <div class="container text-center">
+                  <div class="row">
+                    <div class="col-md-6 col-12">
+                      <div class="headchef">
+                        <img src="images/head_chef.jpg" alt="Head Chef" />
+                      </div>
+                    </div>
+                    <div class="col-md-6 col-12">
+                      <div class="panel text-left">
+                        <h6>HEAD CHEF</h6>
+                        <h1>JOHN HOLT</h1>
+                        <p class="pt-4">
+                          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere iure adipisci harum ducimus accusantium, repudiandae aperiam
+                          voluptatum, id ex ratione omnis reiciendis possimus officiis.
+                        </p>
+                        <p>
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi vitae, tenetur quidem eum aliquid vel labore sint placeat
+                          ad deserunt consectetur fugit ullam. 
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </section>
+              <section class="section-2" id="story">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="5000">
+                  <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                  </ol>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img class="d-block w-100" src="images/story_1.jpg" alt="First slide">
+                      <div class="carousel-caption text-center">
+                        <h1>Our Story</h1>
+                        <h3>Jonh Holt opened Lavn in 2010 after travelling to Vietnam and fell in love with the food.</h3>
+                      </div>
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="images/story_2.jpg" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="images/story_3.jpg" alt="Third slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="images/story_4.jpg" alt="Fourth slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="images/chinh-le-duc-vuDXJ60mJOA-unsplash.jpg" alt="Fifth slide">
+                    </div>
+                  </div>
+                  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </div>
+              </section>
+          </main>
+          <footer>
+
+          </footer>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+          crossorigin="anonymous"></script>
+          <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+          crossorigin="anonymous"></script>
+          <script src="javascript/main.js"></script>
+          <script>
+            window.sr = ScrollReveal();
+            sr.reveal('.navbar', {
+              duration: 2000,
+              origin:'bottom'
+            });
+            sr.reveal('.showcase-left', {
+              duration: 2000,
+              origin:'top',
+              distance:'300px'
+            });
+            sr.reveal('.showcase-right', {
+              duration: 2000,
+              origin:'right',
+              distance:'300px'
+            });
+          </script>
+    </body>
+</html>
