--- a/src/index.html
+++ b/src/index.html
@@ -80,13 +80,18 @@
             <section class="section-1" id="chef">
                 <div class="container text-center">
                   <div class="row">
-                    <div class="col-md-6 col-12">
-                      <div class="headchef">
-                        <img src="images/head_chef.jpg" alt="Head Chef" />
+                    <div class="col-md-6 col-12 showcase-left">
+                      <div class="chef-intro text-center">
+                        <p>MEET OUR CHEF!</p>
                       </div>
-                    </div>
-                    <div class="col-md-6 col-12">
-                      <div class="panel text-left">
+                      <div class="chef-name text-center">
+                        <p>JOHN HOLT</p>
+                      </div>
+                      <div class="about-chef text-center">
+                        <p>John Holt is a British chef, restaurateur, writer and television personality. He was born in Johnstone, Scotland, and raised in Stratford-upon-Avon, England.
+                           He was offered the position of head chef, under chef-patron Pierre Koffmann, at the three-starred La Tante Claire </p>
+                      </div>
+                      <!--<div class="panel text-left">
                         <h6>HEAD CHEF</h6>
                         <h1>JOHN HOLT</h1>
                         <p class="pt-4">
@@ -97,13 +102,75 @@
                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi vitae, tenetur quidem eum aliquid vel labore sint placeat
                           ad deserunt consectetur fugit ullam. 
                         </p>
+                      </div>-->
+                    </div>
+                    <div class="col-md-6 col-12 showcase-right">
+                      <div class="headchef">
+                        <img src="images/head_chef.jpg" alt="Head Chef" />
                       </div>
                     </div>
                   </div>
                 </div>
               </section>
-              <section class="section-2" id="story">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="5000">
+              <section class="section-2" id="open-hours">
+                <div class="container text-center">
+                  <div class="row">
+                    <div class="col-md-6 col-12 showcase-left">
+                      <div class="open-pic">
+                        <img src="images/openinghours-1.jpg">
+                      </div>
+                    </div>
+                    <div class="col-md-6 col-12 showcase-right">
+                      <div class="open-intro text-center">
+                        <p>WE'RE OPEN!</p>
+                      </div>
+                      <div class="open-hours text-center">
+                        <p>OPEN HOURS</p>
+                      </div>
+                      <div class="about-open text-center">
+                        <div class="table-responsive">
+                          <table class="table">
+                            <tbody>
+                              <tr>
+                                <th>MONDAY</th>
+                                  <td>8am - 8pm</td>
+                              </tr>
+                              <tr>
+                                <th>TUESDAY</th>
+                                  <td>8am - 8pm</td>
+                              </tr>
+                              <tr>
+                                <th>WEDNESDAY</th>
+                                  <td>8am -8pm</td>
+                              </tr>
+                              <tr>
+                                <th>WEDNESDAY</th>
+                                  <td>8am -8pm</td>
+                              </tr>
+                              <tr>
+                                <th>THURSDAY</th>
+                                  <td>8am -8pm</td>
+                              </tr>
+                              <tr>
+                                <th>FRIDAY</th>
+                                  <td>8am -8pm</td>
+                              </tr>
+                              <tr>
+                                <th>SATURDAY</th>
+                                  <td>8am -8pm</td>
+                              </tr>
+                              <tr>
+                                <th>SUNDAY</th>
+                                  <td>9am -5pm</td>
+                              </tr>
+                            </tbody>
+                        </table>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!--<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="5000">
                   <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -140,8 +207,54 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                   </a>
-                </div>
+                </div>-->
               </section>
+              <div class="info-wrapper col-12">
+                <div class=" info wrapper">
+                  <div class="row align-items-center">
+                        <div class="col-md-4 col-sm-5 about-us">
+                          <h4 class="text">About us</h4>
+                          <p class="text-content text-light">Lavn is founded by John Holt in 2007.</p>
+                          <p class="pt-4 copy-right">Copyright ©2020 All rights reserved
+                          </p>
+                        </div>
+                        <div class="col-md-5 col-sm-12 news">
+                          <h4 class="text">Newsletter</h4>
+                          <p class="text-content text-light">Stay Updated With News and Special Offers</p>
+                          <form class="form-inline">
+                            <div class="col pl-0">
+                              <div class="input-group pr-5">
+                                <input type="text" class="form-control bg-light email" id="inlineFormInputGroupUsername2" placeholder="Email">
+                                <div class="input-group-prepend">
+                                  <div class="input-group-text">
+                                    <i class="fas fa-arrow-right"></i>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </form>
+                        </div>
+                        <div class="col-md-3 col-sm-12 social">
+                          <h4 class="text">Follow Us</h4>
+                          <p class="text-content text-light">Let us be social</p>
+                          <div class="column">
+                            <a href="#" class="fb text-light ic"> 
+                            <i class="fab fa-facebook-f"></i>
+                            </a>
+                            <a href="#" class="ig text-light ic"> 
+                              <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="#" class="tw text-light ic"> 
+                              <i class="fab fa-twitter"></i>
+                            </a>
+                            <a href="#" class="yt text-light ic"> 
+                              <i class="fab fa-youtube"></i>
+                            </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
           </main>
           <footer>
 
@@ -159,14 +272,18 @@
               origin:'bottom'
             });
             sr.reveal('.showcase-left', {
-              duration: 2000,
+              duration: 1500,
               origin:'top',
               distance:'300px'
             });
             sr.reveal('.showcase-right', {
-              duration: 2000,
+              duration: 1500,
               origin:'right',
               distance:'300px'
+            });
+            sr.reveal('.infor-wrapper', {
+              duration: 2000,
+              origin: 'botom'
             });
           </script>
     </body>
