--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
                       <a href="#story" class="nav-link">STORY</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">LOG IN</a>
+                      <a class="nav-link" href="#">LOGIN</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">CONTACT</a>
@@ -113,7 +113,53 @@
               <!--End of Section-1 Chef-->
               <!--Section-2 Menu-->
               <section class="section-2" id="menu">
-
+                  <div class="container">
+                    <div class="start-template">
+                      <h1 class="mt-5 text-center">Our Menu</h1>
+                    </div>
+                    <div class="row text-center">
+                      <div class="col-lg-6 col-md-12 p-5">
+                        <img src="images/chicken-noodle.jpg" class="rounded-circle" width="300" height="236">
+                        <h2>Chicken Noodle Soup - Pho Ga</h2>
+                        <p>Chicken breast in chicken broth.</p>
+                      </div>
+                      <div class="col-lg-6 col-md-12 p-5">
+                        <img src="images/beef-pho.jpg" class="rounded-circle" width="300" height="236">
+                        <h2>Beef Pho - Pho Bo</h2>
+                        <p>Beef stock, chuck roast steaks, fish sauce.</p>
+                      </div>
+                      <div class="col-lg-6 col-md-12 p-5">
+                        <img src="images/beef-noodle.jpg" class="rounded-circle" width="300" height="236">
+                        <h2>Beef Noodle Soup - Bun Bo</h2>
+                        <p>Beef brisket, cooked beef shank, red cabbage, cooked pork hocks.</p>
+                      </div>
+                      <div class="col-lg-6 col-md -12 p-5">
+                        <img src="images/thick-noodle.jpg" class="rounded-circle" width="300" height="236">
+                        <h2>Thick Noodle Soup - Banh Canh</h2>
+                        <p>Thick noodle, pork knuckle and shrimp.</p>
+                      </div>
+                      <div class="col-lg-6 col-md-12 p-5">
+                        <img src="images/beef-stew.jpg" class="rounded-circle" width="300" height="236">
+                        <h2>Beef Stew - Bo Kho</h2>
+                        <p>Beef stock, chuck roast steaks, fish sauce.</p>
+                      </div>
+                      <div class="col-lg-6 col-md-12 p-5">
+                        <img src="images/seafood-noodle.jpg" class="rounded-circle" width="300" height="236">
+                        <h2>Seafood Noodle Soup - Hu Tieu</h2>
+                        <p>Seafood, pork soup.</p>
+                      </div>
+                      <div class="col-lg-6 col-md-12 p-5">
+                        <img src="images/beef-noodle-salad.jpg" class="rounded-circle" width="300" height="236">
+                        <h2>Beef Noodle Salad - Bun Xao</h2>
+                        <p>Beef brisket, cooked beef shank, red cabbage, cooked pork hocks.</p>
+                      </div>
+                      <div class="col-lg-6 col-md -12 p-5">
+                        <img src="images/crab-noodle-soup.jpg" class="rounded-circle" width="300" height="236">
+                        <h2>Crab Noodle SOup - Banh Canh</h2>
+                        <p>Tomato broth and topped with minced freshwater crab.</p>
+                      </div>
+                    </div>
+                  </div>
               </section>
               <!--End of Section-2 Menu-->
               <!--Secton-3 Hours-->
