Menu Section done

--- a/src/index.html
+++ b/src/index.html
@@ -114,49 +114,75 @@
               <!--Section-2 Menu-->
               <section class="section-2" id="menu">
                   <div class="container">
-                    <div class="start-template">
-                      <h1 class="mt-5 text-center">Our Menu</h1>
+                    <div class="row">
+                      <div class="col-xl-12">
+                      <p class="text">MENU</p>
+                      </div>
                     </div>
                     <div class="row text-center">
-                      <div class="col-lg-6 col-md-12 p-5">
-                        <img src="images/chicken-noodle.jpg" class="rounded-circle" width="300" height="236">
-                        <h2>Chicken Noodle Soup - Pho Ga</h2>
-                        <p>Chicken breast in chicken broth.</p>
+                      <div class="col-lg-6 col-md-12 menu showcase-left">
+                        <img src="images/chicken-noodle.jpg" class="rounded-circle" >
+                        <div class="content">
+                          <h4>Chicken Noddle Soup - Pho Ga</h2>
+                          <p>Chicken breast in chicken broth.</p>
+                          <span>$15</span>
+                        </div>
                       </div>
-                      <div class="col-lg-6 col-md-12 p-5">
-                        <img src="images/beef-pho.jpg" class="rounded-circle" width="300" height="236">
-                        <h2>Beef Pho - Pho Bo</h2>
-                        <p>Beef stock, chuck roast steaks, fish sauce.</p>
+                      <div class="col-lg-6 col-md-12 menu showcase-right">
+                        <img src="images/beef-pho.jpg" class="rounded-circle" >
+                        <div class="content">
+                          <h4>Beef Pho - Pho Bo</h2>
+                          <p>Beef stock, chuck roast steaks, fish sauce.</p>
+                          <span>$17</span>
+                        </div>
                       </div>
-                      <div class="col-lg-6 col-md-12 p-5">
-                        <img src="images/beef-noodle.jpg" class="rounded-circle" width="300" height="236">
-                        <h2>Beef Noodle Soup - Bun Bo</h2>
-                        <p>Beef brisket, cooked beef shank, red cabbage, cooked pork hocks.</p>
+                      <div class="col-lg-6 col-md-12 menu showcase-left">
+                        <img src="images/beef-noodle.jpg" class="rounded-circle">
+                        <div class="content">
+                          <h4>Beef Noddle Soup - Bun Bo</h2>
+                          <p>Beef brisket, beef shank, pork hocks.</p>
+                          <span>$20</span>
+                        </div>
                       </div>
-                      <div class="col-lg-6 col-md -12 p-5">
-                        <img src="images/thick-noodle.jpg" class="rounded-circle" width="300" height="236">
-                        <h2>Thick Noodle Soup - Banh Canh</h2>
-                        <p>Thick noodle, pork knuckle and shrimp.</p>
+                      <div class="col-lg-6 col-md -12 menu showcase-right">
+                        <img src="images/thick-noodle.jpg" class="rounded-circle" >
+                        <div class="content">
+                          <h4>Thick Noddle Soup - Banh Canh</h2>
+                          <p>Thick noodle, pork knuckle and shrimp.</p>
+                          <span>$13</span>
+                        </div>
                       </div>
-                      <div class="col-lg-6 col-md-12 p-5">
-                        <img src="images/beef-stew.jpg" class="rounded-circle" width="300" height="236">
-                        <h2>Beef Stew - Bo Kho</h2>
-                        <p>Beef stock, chuck roast steaks, fish sauce.</p>
+                      <div class="col-lg-6 col-md-12 menu showcase-left">
+                        <img src="images/beef-stew.jpg" class="rounded-circle" >
+                        <div class="content">
+                          <h4>Beef Stew - Bo Kho</h2>
+                          <p>Beef stock, chuck roast steaks, fish sauce.</p>
+                          <span>$15</span>
+                        </div>
                       </div>
-                      <div class="col-lg-6 col-md-12 p-5">
-                        <img src="images/seafood-noodle.jpg" class="rounded-circle" width="300" height="236">
-                        <h2>Seafood Noodle Soup - Hu Tieu</h2>
-                        <p>Seafood, pork soup.</p>
+                      <div class="col-lg-6 col-md-12 menu showcase-right">
+                        <img src="images/seafood-noodle.jpg" class="rounded-circle">
+                        <div class="content">
+                          <h4>Seafood Noddle Soup - Hu Tieu</h2>
+                          <p>Seafood, pork soup.</p>
+                          <span>$17</span>
+                        </div>
                       </div>
-                      <div class="col-lg-6 col-md-12 p-5">
-                        <img src="images/beef-noodle-salad.jpg" class="rounded-circle" width="300" height="236">
-                        <h2>Beef Noodle Salad - Bun Xao</h2>
-                        <p>Beef brisket, cooked beef shank, red cabbage, cooked pork hocks.</p>
+                      <div class="col-lg-6 col-md-12 menu showcase-left">
+                        <img src="images/beef-noodle-salad.jpg" class="rounded-circle">
+                        <div class="content">
+                          <h4>Beef Noddle Salad - Bun Xao</h2>
+                          <p>Beef brisket, beef shank, pork hocks.</p>
+                          <span>$20</span>
+                        </div>
                       </div>
-                      <div class="col-lg-6 col-md -12 p-5">
-                        <img src="images/crab-noodle-soup.jpg" class="rounded-circle" width="300" height="236">
-                        <h2>Crab Noodle SOup - Banh Canh</h2>
-                        <p>Tomato broth and topped with minced freshwater crab.</p>
+                      <div class="col-lg-6 col-md-12 menu showcase-right">
+                        <img src="images/crab-noodle-soup.jpg" class="rounded-circle">
+                        <div class="content">
+                          <h4>Crab Noddle Soup - Banh Canh</h2>
+                          <p>Tomato broth topped with freshwater crab.</p>
+                          <span>$15</span>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -301,7 +327,7 @@
                   <div class="row align-items-center">
                         <div class="col-md-4 col-sm-5 about-us">
                           <h4 class="text">About us</h4>
-                          <p class="text-content text-light">Lavn is founded by John Holt in 2007. Since then, Lavn has been a place for simplicity, good food, good environment and good service.</p>
+                          <p class="text-content text-light">Lavn is founded by John Holt in 2007. Simplicity, good food, good environment and good service.</p>
                           <p class="pt-4 copy-right">Copyright ©2020 All rights reserved
                           </p>
                         </div>
@@ -362,7 +388,7 @@
       });
       sr.reveal('.showcase-left', {
         duration: 1500,
-        origin:'top',
+        origin:'left',
         distance:'300px'
       });
       sr.reveal('.showcase-right', {
@@ -370,7 +396,7 @@
         origin:'right',
         distance:'300px'
       });
-      sr.reveal('.infor-wrapper', {
+      sr.reveal('.info-wrapper', {
         duration: 2000,
         origin: 'botom'
       });
@@ -404,7 +430,7 @@
         grabCursor: true,
         centeredSlides: true,
         slidesPerView: 'auto',
-        autoplay: {delay: 4000, },
+        autoplay: {delay: 3000, },
         coverflowEffect: {
           rotate: 50,
           stretch: 0,
