--- a/src/index.html
+++ b/src/index.html
@@ -121,7 +121,7 @@
                     </div>
                     <div class="row text-center">
                       <div class="col-lg-6 col-md-12 menu showcase-left">
-                        <img src="images/chicken-noodle.jpg" class="rounded-circle" >
+                        <img src="images/chicken-noddle.jpg" class="rounded-circle" >
                         <div class="content">
                           <h4>Chicken Noddle Soup - Pho Ga</h2>
                           <p>Chicken breast in chicken broth.</p>
@@ -137,7 +137,7 @@
                         </div>
                       </div>
                       <div class="col-lg-6 col-md-12 menu showcase-left">
-                        <img src="images/beef-noodle.jpg" class="rounded-circle">
+                        <img src="images/beef-noddle.jpg" class="rounded-circle">
                         <div class="content">
                           <h4>Beef Noddle Soup - Bun Bo</h2>
                           <p>Beef brisket, beef shank, pork hocks.</p>
@@ -145,7 +145,7 @@
                         </div>
                       </div>
                       <div class="col-lg-6 col-md -12 menu showcase-right">
-                        <img src="images/thick-noodle.jpg" class="rounded-circle" >
+                        <img src="images/thick-noddle.jpg" class="rounded-circle" >
                         <div class="content">
                           <h4>Thick Noddle Soup - Banh Canh</h2>
                           <p>Thick noodle, pork knuckle and shrimp.</p>
@@ -161,7 +161,7 @@
                         </div>
                       </div>
                       <div class="col-lg-6 col-md-12 menu showcase-right">
-                        <img src="images/seafood-noodle.jpg" class="rounded-circle">
+                        <img src="images/seafood-noddle.jpg" class="rounded-circle">
                         <div class="content">
                           <h4>Seafood Noddle Soup - Hu Tieu</h2>
                           <p>Seafood, pork soup.</p>
@@ -169,7 +169,7 @@
                         </div>
                       </div>
                       <div class="col-lg-6 col-md-12 menu showcase-left">
-                        <img src="images/beef-noodle-salad.jpg" class="rounded-circle">
+                        <img src="images/beef-noddle-salad.jpg" class="rounded-circle">
                         <div class="content">
                           <h4>Beef Noddle Salad - Bun Xao</h2>
                           <p>Beef brisket, beef shank, pork hocks.</p>
@@ -177,7 +177,7 @@
                         </div>
                       </div>
                       <div class="col-lg-6 col-md-12 menu showcase-right">
-                        <img src="images/crab-noodle-soup.jpg" class="rounded-circle">
+                        <img src="images/crab-noddle-soup.jpg" class="rounded-circle">
                         <div class="content">
                           <h4>Crab Noddle Soup - Banh Canh</h2>
                           <p>Tomato broth topped with freshwater crab.</p>
